# granulate-char-OCR

./: .gitignore  CLAUDE.md  FINAL_TEST_REPORT.md  IMPROVED_TEST_REPORT.md  OCR_IMPROVEMENT_REPORT.md  README.md  evaluate_new_testdata.py  evaluation_results.json  optimize_preprocessing.py  pyproject.toml  retrain_with_new_data.py  test_ocr_api.py  test_similarity_mapping.py
backend/: main.py
backend/api/endpoints/: health.py  ocr.py
backend/application/services/: __init__.py  character_validator.py  ocr_service.py  ocr_service_backup.py  ocr_service_improved.py
backend/domain/entities/: __init__.py  character.py  ocr_result.py
backend/infrastructure/mapping/: __init__.py  granulate_alphabet.py  granulate_alphabet_generated.py  granulate_character_data.json
docs/: NEXT_STEPS.md  apple-silicon-setup.md  jtessboxeditor-detailed-steps.md  jtessboxeditor-training-guide.md  ml-based-training-guide.md  quick-jtessboxeditor-guide.md  training-guide.md
front/: package.json  pnpm-lock.yaml  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
front/app/: root.tsx  routes.ts
my-react-router-app/: package.json  pnpm-lock.yaml
preprocessing_results/: granulate_preprocessor.py  preprocessing_evaluation.json
results/: evaluation_results.json
scripts/: crnn_model.py  evaluate_crnn.py  evaluate_new_testdata.py  optimize_preprocessing.py  retrain_with_new_data.py  train_crnn.py
tests/: README.md
tests/debug/: analyze_pleasure_image.py  analyze_test_image_cnn.py  check_model_structure.py  test_hash_mapping.py  test_improved_parameters.py  test_integrated_ocr.py
tests/integration/: test_ocr_api.py  test_real_image.py
training_data/extracted/: character_mapping.json
training_data/scripts/: augment_simple.py  augment_with_gan.py  create_mapping.py  create_tesseract_data.py  debug_extraction.py  extract_from_reference.py  few_shot_learning.py  optimize_preprocessing.py  preprocess_color_images.py  retrain_with_real_data.py  train_cnn_model.py
(+21 files in other folders)
